# argentum

./: .gitignore  Adicionales.md  CMakeLists.txt  CommandsChecklist.md  IdList.md  LICENSE  Protocol.md  README.md  ToDoList.md  config.sh  convenciones.txt  ej_broadcast.json  ideaCreature.md  install.sh  installer.sh  scripts.sh  uninstall.sh
.github/ISSUE_TEMPLATE/: idea-de-mejora.md  reporte-de-bug.md
Abstractions/: README.md  template.cpp  template.h  template_sdl.cpp
Abstractions/Client-Server/Accepter/: Accepter.cpp  Accepter.h  ClientLogin.cpp  ClientLogin.h  LoginValidator.h  README.md
Abstractions/Client-Server/Socket/: README.md  Socket.h  SocketWrapper.cpp  SocketWrapper.h
Abstractions/Exceptions/Exception/: Exception.cpp  Exception.h  README.md
Abstractions/Exceptions/ParticularException/: ClosedQueueException.h  ClosedSocketException.h  README.md  SDLException.h
Abstractions/Threads/ActiveObject/: ActiveObject.cpp  README.md
Abstractions/Threads/BlockingQueue/: BlockingQueue.h  README.md
Abstractions/Threads/Monitor/: README.md
Abstractions/Threads/Thread/: README.md
Abstractions/View/: Entities.h  EntitiesContainer.cpp  Entity.cpp  Foo.cpp  Foo.h  ParticularEntity.cpp  ParticularEntity.h  README.md  Texture.cpp  View.cpp  View.h  main.cpp
Assets/INDICES/: Cascos.ini  Config.ini  Cuerpos.ini  Graficos.ini  Personajes.ini  Triggers.ini  particulas.ini  tips_english.json  tips_spanish.json
Assets/Maps/: DebugMap.json  MapTest.json  OtroMap.json  Proxy.json  TestMap.json  maps.json  test (3rd copy).map  test (copy).map  test.map
Assets/Maps/DebugMap/: decoration.json  ground_tiles.json  map.json  metadata.json
Assets/Maps/Tilesets/: 01-ground_tiles.json  decoration.json  ground_tiles.json  metadata.json
Assets/Maps/old/: DebugMap.json  MapTest.json  OtroMap.json  Proxy.json  TestMap.json  test (another copy).map
Assets/Views/ConnectionView/: BotonCrearPresionado.psd  BotonJugarPresionado.psd
Assets/Views/HomeView/: BarraClickeada.psd  BarraNoClickeada.psd  BotonConectarPresionado.psd  HomeView.psd
Assets/Views/SignUpView/: BarraSoloLecturaChica.psd  BotonCrear.psd  BotonCrearPresionado.psd  BotonNextPresionado.psd  BotonPrev.psd  BotonPrevPresionado.psd  BotonVolver.psd  BotonVolverPresionado.psd
Client/: template.cpp
Client/config/: audio.json  config.json  effects.json  item_sprites.json  signup_data.json  unit_sprites.json  views_config.json
Client/includes/: Client.h  ConnectionView.h  ConstantRateFunc.h  HomeView.h  RoundRobinList.h  SignUpView.h  TutorialView.h  colors.h  contexts.h  defs.h  paths.h
Client/includes/GameModel/: CommandDispatcher.h  Event.h  GameEvent.h  InputParser.h  ParserReply.h  Receiver.h  Receiver.old
Client/includes/GameView/: Camera.h  Character.h  CharacterContainer.h  Console.h  Creature.h  CreatureContainer.h  EventHandler.h  GameView.h  HUD.h  HUDComponent.h  ItemSpriteContainer.h  MapView.h  Player.h  ProgressBar.h  Selection.h  Sprites.h  Stage.h  TileContainer.h  Unit.h  UnitContainer.h  UnitSpriteContainer.h  UserInfo.h  UserInventory.h  UserStats.h
Client/includes/Model/: Client.h  ClientAcceptor.h  ClientReceiver.h  ClientSender.h  ClientTalker.h  Command.h  CommandDispatcher.h  InputParser.h  LogIn.h  Receiver.h  ServerProxy.h  Update.h  Updater.h  defs.h
Client/includes/SDL/: Mixer.h  Renderer.h  Texture.h  Window.h
Client/includes/View/: Camera.h  Character.h  Console.h  Creature.h  Entity.h  EventHandler.h  GameView.h  HUD.h  HUDComponent.h  ItemSpriteContainer.h  Map.h  MapView.h  Player.h  Predictor.h  ProgressBar.h  Renderer.h  Selection.h  ServerProxy.h  Sprite.h  Sprites.h  Stage.h  Texture.h  Tile.h  TileContainer.h  Unit.h  UnitContainer.h  UnitSpriteContainer.h  UserInfo.h  UserInventory.h  UserStats.h  Window.h  config.h
Client/src/: Client.cpp  ConnectionView.cpp  ConstantRateFunc.cpp  HomeView.cpp  SignUpView.cpp  TutorialView.cpp  main.cpp
Client/src/GameModel/: Event.cpp  (+5 more)
Common/config/: maps.json
Common/includes/: BlockingQueue.h  DataStructs.h  Inventory.h  JSON.h  Map.h  MapContainer.h  MapParser.h  NonBlockingQueue.h  Orientation.h  Protocol.h  Queue.h  RandomNumberGenerator.h  Socket.h  Thread.h  Tile.h  UnitData.h  defs.h  game_config.h  json_conversion.h  paths.h  types.h
Common/src/: Exception.cpp  JSON.cpp  Map.cpp  MapContainer.cpp  MapParser.cpp  RandomNumberGenerator.cpp  Socket.cpp  Thread.cpp  json_conversion.cpp  paths.cpp
Config/Client/: audio.json  config.json  gui_config.json  inventory_sprites.json  item_sprites.json  races.json  signup_data.json  sprites.json  tiles.json  unit_sprites.json  user_config.json  view_config.json
Config/Common/: common_config.json  maps.json
Config/Server/: creatures.json  engine_config.json  items.json  kind.json  kinds.json  npc.json  npcs.json  playerdata.cfg  playerinfo.cfg  race.json  races.json
Old/: Adicionales.md  CommandsChecklist.md  Protocol.md  ToDoList.md
Old/Abstractions/: template_sdl.h
Server/: CMakeLists.txt  Draft.md  template.cpp
Server/config/: config.json  creatures.json  formulas_modifiers.json  items.json  kinds.json  new_player_data.json  npcs.json  races.json
Server/includes/: Alive.h  Character.h  CharacterClass.h  ClientConnection.h  ClientList.h  Command.h  CommandQueue.h  Config.h  Dead.h  Defence.h  Equipment.h  Formulas.h  Inventory.h  Item.h  Kind.h  Level.h  Position.h  Potion.h  Profession.h  Race.h  RandomNumberGenerator.h  Server.h  Spell.h  State.h  States.h  Wand.h  Weapon.h  Wearable.h  config_structs.h  defs.h  initial_configs.h  paths.h
Server/src/: Character.cpp  CharacterClass.cpp  ClientConnection.cpp  ClientList.cpp  Command.cpp  CommandQueue.cpp  Config.cpp  Defence.cpp  Equipment.cpp  Formulas.cpp  Game.cpp  Inventory.cpp  Item.cpp  Kind.cpp  Level.cpp  Position.cpp  Potion.cpp  Race.cpp  RandomNumberGenerator.cpp  Server.cpp  Spell.cpp  States.cpp  Wand.cpp  Weapon.cpp  Wearable.cpp  main.cpp
docs/: Adicionales.md  IdList.md  Protocol.md  _config.yml  index.md  play.md  project.md
docs/_layouts/: default.html
useful_abstractions/: README.md
(+546 files in other folders)
